--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.2'
+    compileSdkVersion 31
+    buildToolsVersion '31.0.0'
     defaultConfig {
         applicationId "patil.rahul.lyrics"
         minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 3
-        versionName "1.2"
+        targetSdkVersion 31
+        versionCode 4
+        versionName "1.3"
+        multiDexEnabled true
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
@@ -21,11 +22,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
+
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    //implementation 'com.google.android.gms:play-services-ads:20.2.0'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.google.android.gms:play-services-ads:11.4.2'
-    testImplementation 'junit:junit:4.12'
 }
