--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package ="patil.rahul.lyrics">
+    package="patil.rahul.lyrics">
 
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
             android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +21,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".DetailActivity"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".DetailActivity"
+            android:parentActivityName=".MainActivity" />
 
     </application>
 
